#70 Align completions for traverse completion
#69
Finished Specific completion Rules/Strict